优化图片显示

--- a/Node/4.STL空间配置器stl_alloc.md
+++ b/Node/4.STL空间配置器stl_alloc.md
@@ -440,7 +440,7 @@ if (result == 0) {
 return (result);
 ```
 
-![截屏2023-04-07 09.00.34](4.STL空间配置器stl_alloc.assets/截屏2023-04-07 09.00.34.png)
+<img src="4.STL空间配置器stl_alloc.assets/截屏2023-04-07 09.00.34.png" alt="截屏2023-04-07 09.00.34" style="zoom:50%;" />
 
 ### 4.refill()
 
@@ -576,7 +576,7 @@ char *__default_alloc_template<threads, inst>::chunk_alloc(size_t size, int &nob
 
 
 
-![截屏2023-04-10 20.59.50](4.STL空间配置器stl_alloc.assets/截屏2023-04-10 20.59.50-1131608.png)
+<img src="4.STL空间配置器stl_alloc.assets/截屏2023-04-10 20.59.50-1131608.png" alt="截屏2023-04-10 20.59.50" style="zoom:50%;" />
 
 ### 7.reallocate()
 
