--- a/Node/迭代器的设计.md
+++ b/Node/迭代器的设计.md
@@ -92,7 +92,7 @@ cout<<func(ite);	//输出8
 
 ### iterator_traits
 
-![截屏2023-04-22 16.45.59](迭代器的设计.assets/截屏2023-04-22 16.45.59.png)
+<img src="迭代器的设计.assets/截屏2023-04-22 16.45.59.png" alt="截屏2023-04-22 16.45.59" style="zoom:50%;" />
 
 ```c++
 template<class I>
@@ -124,7 +124,7 @@ struct iterator_traits {
 
 ### 迭代器的分类和从属关系：
 
-![截屏2023-04-22 22.51.34](迭代器的设计.assets/截屏2023-04-22 22.51.34.png)
+<img src="迭代器的设计.assets/截屏2023-04-22 22.51.34.png" alt="截屏2023-04-22 22.51.34" style="zoom:67%;" />
 
 任何一个迭代器，其类型永远应该落在"迭代器所隶属之各种类型中，最强化的那个"
 
