修改笔记中不足的地方

--- a/Node/10.heap--优先队列的底层实现.md
+++ b/Node/10.heap--优先队列的底层实现.md
@@ -6,7 +6,7 @@
 
 所谓 `binary heap` 就是一种` complete binary tree`（完全二叉树），也就是说，整棵 `binary tree `除了最底层的叶节点(s)之外，是填满的，而最底层的叶节点(s)由左至右又不得有空隙。
 
-`complete binary tree` 整棵树内没有任何节点漏洞，这带来一个极大的好处：我们可以利用 `array` 来储存所有节点。假设动用一个小技巧了，将`array`的 批元素保留（或设为无限大值或无限小值），那么当` complete binary tree` 中的某个节点位于`array` 的`i`处时，其左子节点必位于`array `的`2i`处，其右子书点必位于`array `的`2i+1`处，其父节点必位于`“i/2”`处（此处的`“/" `权且代表高斯符号，取其整数）通过这么简单的位置规则，`array` 可以轻易实现出 `complete binary tree`。 这种以`array` 表述`tree` 的方式，我们称为隐式表述法 `(implicit ropresentation）` 。
+`complete binary tree` 整棵树内没有任何节点漏洞，这带来一个极大的好处：我们可以利用 `array` 来储存所有节点。假设动用一个小技巧了，将`array`的 #0元素保留（或设为无限大值或无限小值），那么当` complete binary tree` 中的某个节点位于`array` 的`i`处时，其左子节点必位于`array `的`2i`处，其右子书点必位于`array `的`2i+1`处，其父节点必位于`“i/2”`处（此处的`“/" `权且代表高斯符号，取其整数）通过这么简单的位置规则，`array` 可以轻易实现出 `complete binary tree`。 这种以`array` 表述`tree` 的方式，我们称为隐式表述法 `(implicit ropresentation）` 。
 
 这么一来，我们需要的工具就很简单了：一个`array`和一组`heap` 算法（用来插人元素、删除元素、取极值，將某一整组数据排列成一个`heap`）。`array` 的缺点是无法动态改变大小，而 `heap `却需要这项功能，因此，以`vector `代替 `array` 是更好的选择。
 
@@ -14,7 +14,7 @@
 
 <img src="10.heap--优先队列的底层实现.assets/截屏2023-05-23 20.29.30.png" alt="截屏2023-05-23 20.29.30" style="zoom:50%;" />
 
-这里，根节点（A）的下标必须是0。才能得到：
+这里，**根节点（A）的下标必须是0**。才能得到：
 
 对于某节点i：
 
