--- a/Node/3.简单的空间配置器allocator.md
+++ b/Node/3.简单的空间配置器allocator.md
@@ -58,6 +58,25 @@ int main() {
 
 
 
+### `placement new`
+
+"Placement new" 是 C++ 中的一个特殊形式的 new 操作符，用于在已分配的内存空间上构造对象。与常规的 new 操作符不同，placement new 不会分配内存，而是在已有的内存位置上直接构造对象。
+
+placement new 的语法如下：
+
+```
+new (address) Type(arguments);
+```
+
+其中，`address` 是已分配的内存地址，`Type` 是要构造的对象类型，`arguments` 是传递给对象构造函数的参数。
+
+使用 placement new 可以在指定的内存位置上构造对象，这在某些场景下非常有用，例如：
+
+1. 自定义内存分配：当需要使用特殊的内存分配器或从特定的内存池中分配内存时，可以使用 placement new 在预先分配的内存块上构造对象。
+2. 对象重用：当需要重复使用已分配的内存空间来构造不同类型的对象时，可以通过 placement new 在同一块内存上构造不同类型的对象。
+
+
+
 ```c++
 //只是对::operator new 和::operator delete 进行简单的封装，效率不高
 #include <new>
