--- a/Node/4.STL空间配置器stl_alloc.md
+++ b/Node/4.STL空间配置器stl_alloc.md
@@ -4,24 +4,14 @@
 
 [new、delete与malloc、free的区别，内在实现](https://blog.csdn.net/JACKSONMHLK/article/details/123298801)
 
-- c++的内存基本操作是`operator new()`,内存释放的基本操作是`operator delete()`。相当于c语言的`malloc`和`free`函数。
+- c++的内存基本操作是`operator new()`,内存释放的基本操作是`operator delete()`。
 - 使用`malloc`和`free`函数作为STL第一级内存配置器的原因是它们是标准C库中的函数，因此在不同的平台和编译器上都可以使用。这意味着STL可以在各种不同的操作系统和编译器上运行，并且不需要针对每个平台和编译器进行特定的修改。
 - `malloc`和`free`函数已经经过多年的测试和优化，具有很高的稳定性和性能。它们使用了许多底层的系统调用和优化技巧，以确保在各种情况下都能提供快速和可靠的内存分配和释放。
 - c++并未提供相应于`realloc()`的内存配置操作
 
 
 
-### c++的内存基本操作`operator new()`,内存释放的基本操作是`operator delete()`的底层实现
 
-C++中的`operator new()`和`operator delete()`函数的底层实现可能使用`malloc()`和`free()`函数来实现内存分配和释放操作，但这并不是必须的。
-
-实际上，C++标准并没有规定`operator new()`和`operator delete()`函数的底层实现必须使用`malloc()`和`free()`函数。这些函数的实现可以使用任何适合的内存分配和释放算法，只要它们符合C++标准的规定即可。
-
-然而，许多C++编译器和实现都使用了`malloc()`和`free()`函数来实现`operator new()`和`operator delete()`函数。这是因为`malloc()`和`free()`函数是C标准库中的函数，它们已经被广泛使用和测试，并且在各种操作系统和平台上都可用。
-
-此外，许多现代操作系统和编译器都对`malloc()`和`free()`函数进行了优化，以提高内存分配和释放的性能和效率。因此，使用`malloc()`和`free()`函数来实现`operator new()`和`operator delete()`函数是一种通用、可靠、高效的方法。
-
-需要注意的是，`malloc()`和`free()`函数与`operator new()`和`operator delete()`函数之间并不是等价的。虽然它们都用于内存分配和释放，但它们的行为和使用方式有所不同。在C++中，建议使用`new`和`delete`关键字来进行内存分配和释放，而不是直接调用`malloc()`和`free()`函数。
 
 
 
@@ -197,12 +187,6 @@ void* memmove(void* dest, const void* src, size_t count);
 
 
 
-### c++的内存分配分配的空间是那个硬件设备上的
-
-
-
-
-
 
 
 
@@ -220,11 +204,12 @@ void* memmove(void* dest, const void* src, size_t count);
 
 ### 内存分配过程
 
-当请求的内存大于128bytes时，用第一级配置器调用malloc,free等函数创建和销毁内存。
+- 当一次请求的内存大于128kb时，使用第一个空间配置器，直接调用malloc和free进行内存的分配和释放。
 
-当请求的内存小于128bytes时，用第二级配置器调用allocate函数分配，过程如下：
+  当一次请求的内存小于128kb时就使用第二级空间配置器。第二级空间配置器用数组保存16个链表节点（分别表示8到128字节）来维护内存池。以一次请求30字节的内存为例，30字节明显小于128字节，使用第二级空间配置器。
 
-- 先把请求的内存补齐成8的倍数n个字节。然后搜索内存链表索引`free_list`。如果不为空，把free_list对应的内存链表返回给用户。如果为空，说明`free_list`没有对应大小的空间了。调用`refill`重新为free_list填充“多个”n字节的内存。（这个的“多个”在`refill`中用变量`nobjs`表示，默认为20个。）`refill`调用`chunk_alloc`函数从内存池分配一个大的内存，大小为`nobjs*n`。如果内存池用剩余的大小不足`nobjs*n`，则有多少分配多少。`chunk_alloc`函数分配完大内存后，`refill`做的工作就是把大内存中除了所请求的内存（放在`my_free_list[0]`）外，把大内存剩余的内存连接到`free_list`对应的索引之下，以便后续使用。
+  1. 先对30字节进行8字节的内存补齐，补齐到32字节，然后用malloc请求20*32字节的空间作为内存池，挂载到表示32字节的内存数组中，然后分配第一个32字节给客户端来响应请求。剩余部分作为内存池。
+  2. 当客户端再次申请60字节的内存时，用同样的方法把60字节补齐到64字节，然后直接从内存池中分配64字节的内存给客户端，然后数组中表示64字节的链表指针指向分配内存的首地址。
 
 
 
@@ -531,7 +516,7 @@ char *__default_alloc_template<threads, inst>::chunk_alloc(size_t size, int &nob
                     *my_free_list = p->free_list_link;
                     start_free = (char *) p;
                     end_free = start_free + i;
-                    //内存池更新完毕，重新分配内存池
+                    //内存池更新完毕，重新分配内存池,递归调用自己，调整nobjs
                     return (chunk_alloc(size, nobjs));
                 }
             }
