--- a/Node/红黑树.md
+++ b/Node/红黑树.md
@@ -6,7 +6,7 @@
 
 ## 二叉搜索树
 
-`BST(Binary Search Tree)` 插入、删除、查找时间复杂度都是 `**O(log n)`** ，但树不平衡的话其性能会变差，最差变为` O(n) `.
+`BST(Binary Search Tree)` 插入、删除、查找时间复杂度都是 `O(log n)`，但树不平衡的话其性能会变差，最差变为` O(n) `.
 
 二叉搜索树的节点放置规则是：**任何节点的键值一定大于其左子树中的每一个节点的键值、并小于其右子树中的每一个节点的键值。**因此，从根节点一直往左走，直至无左路可走，即得最小元素：从根节点一直往在走，直全无右路可走，即得最大元素。
 
@@ -72,6 +72,63 @@ AVL树具有以下性质：**它是一棵空树或它的左右两个子树的高
 
 **根据规则4，新增节点必须为红：根据规则3，新增节点之父节点必须为黑。**当新节点根据二叉搜素树的规则到达其插人点，却未能符合上述条件时，就必须调整颜色并旋转树形。<img src="红黑树.assets/截屏2023-05-29 16.31.25.png" alt="截屏2023-05-29 16.31.25" style="zoom: 50%;" />
 
+### 红黑树的节点及<K,V>的实现
+
+```c++
+template <typename Value>
+struct RbTreeNode {
+    RbTreeNode* parent;
+    RbTreeNode* left;
+    RbTreeNode* right;
+    Value value;
+    bool color;
+};
+```
+
+它的每个节点存储一个键值对，其中键值用于对节点进行排序和查找。即`Value`是一个键值对。
+
+其中 `Value` 是节点存储的值类型，`value` 是节点存储的值。但是在红黑树的实现中，我们需要对节点进行排序和查找，因此需要从节点的 `value` 中获取键值。
+
+**由于 `Value` 类型的不同，获取键值的方式也可能不同，因此在红黑树的模板参数中，需要指定一个函数对象 `KeyOfValue`，用于从 `value` 中获取键值。例如，如果我们的红黑树节点的 `value` 是一个 `std::pair<K, V>` 类型，其中 `K` 是键值类型。**以容器map为例，那么可以定义一个 `KeyOfValue` 函数对象如下：
+
+```c++
+template <typename T>
+struct Select1st {
+    const typename T::first_type& operator()(const T& x) const {
+        return x.first;
+    }
+};
+
+template <typename K, typename V, typename Compare>
+class RbTree {
+public:
+    typedef std::pair<K, V> value_type;
+    typedef value_type* pointer;
+    typedef value_type& reference;
+    typedef Select1st<value_type> key_of_value;
+
+    // ...
+};
+```
+
+在上述代码中，`Select1st` 是一个函数对象，它的 `operator()` 函数返回一个 `std::pair` 的第一个元素，即键值 `K`。在 `RbTree` 模板参数中，`key_of_value` 指定了键值获取方式为 `Select1st<value_type>`，即从 `value` 中获取第一个元素作为键值。
+
+**在STL源码中，红黑树的模板参数中的 `KeyOfValue` 是一个函数对象，用于从红黑树节点的 `value` 中获取键值。**
+
+
+
+## key
+
+```c++
+ const key_type &key(link_type x) { return KeyOfValue()(value(x)); }
+```
+
+在 C++ STL 中，`KeyOfValue` 是一个函数对象，它用于从容器中的元素中提取关键字。在红黑树中，每个节点都包含一个元素，其中包含了一个关键字和一个值。`KeyOfValue` 用于从节点的元素中提取关键字。
+
+`KeyOfValue()` 表示创建一个 `KeyOfValue` 的实例，并调用其函数操作符（函数重载运算符 `operator()`）来提取节点元素中的关键字。括号中的 `value(x)` 表示获取节点 `x` 的元素，即返回类型为 `value_type&` 的引用。因此，`KeyOfValue()(value(x))` 表示对节点 `x` 的元素调用 `KeyOfValue` 函数对象的函数操作符，以提取其关键字。
+
+
+
 ### 插入节点
 
 **红黑树插入删除节点后，迭代器可能会失效。**
@@ -132,66 +189,13 @@ S 为红且X为外侧插人。对此情况，先对P和G做一次单旋转，并
 
 
 
-## key
 
-```c++
-const key_type &key(link_type x) { return KeyOfValue()(value(x)); }
-```
-
-在 C++ STL 中，`KeyOfValue` 是一个函数对象，它用于从容器中的元素中提取关键字。在红黑树中，每个节点都包含一个元素，其中包含了一个关键字和一个值。`KeyOfValue` 用于从节点的元素中提取关键字。
-
-`KeyOfValue()` 表示创建一个 `KeyOfValue` 的实例，并调用其函数操作符（函数重载运算符 `operator()`）来提取节点元素中的关键字。括号中的 `value(x)` 表示获取节点 `x` 的元素，即返回类型为 `value_type&` 的引用。因此，`KeyOfValue()(value(x))` 表示对节点 `x` 的元素调用 `KeyOfValue` 函数对象的函数操作符，以提取其关键字。
-
-
-
-## 模板参数 KeyOfValue
-
-在STL源码中，红黑树的模板参数中的 `KeyOfValue` 是一个函数对象，用于从红黑树节点的 `value` 中获取键值。
-
-红黑树是一种用于实现关联容器的数据结构，它的每个节点存储一个键值对，其中键值用于对节点进行排序和查找。在STL源码中，红黑树节点的定义类似于以下形式：
-
-```c++
-template <typename Value>
-struct RbTreeNode {
-    RbTreeNode* parent;
-    RbTreeNode* left;
-    RbTreeNode* right;
-    Value value;
-    bool color;
-};
-```
-
-其中 `Value` 是节点存储的值类型，`value` 是节点存储的值。但是在红黑树的实现中，我们需要对节点进行排序和查找，因此需要从节点的 `value` 中获取键值。
-
-由于 `Value` 类型的不同，获取键值的方式也可能不同，因此在红黑树的模板参数中，需要指定一个函数对象 `KeyOfValue`，用于从 `value` 中获取键值。例如，如果我们的红黑树节点的 `value` 是一个 `std::pair<K, V>` 类型，其中 `K` 是键值类型，那么可以定义一个 `KeyOfValue` 函数对象如下：
-
-```c++
-template <typename T>
-struct Select1st {
-    const typename T::first_type& operator()(const T& x) const {
-        return x.first;
-    }
-};
-
-template <typename K, typename V, typename Compare>
-class RbTree {
-public:
-    typedef std::pair<K, V> value_type;
-    typedef value_type* pointer;
-    typedef value_type& reference;
-    typedef Select1st<value_type> key_of_value;
-
-    // ...
-};
-```
-
-在上述代码中，`Select1st` 是一个函数对象，它的 `operator()` 函数返回一个 `std::pair` 的第一个元素，即键值 `K`。在 `RbTree` 模板参数中，`key_of_value` 指定了键值获取方式为 `Select1st<value_type>`，即从 `value` 中获取第一个元素作为键值。
 
 
 
 ## copy
 
-深拷贝
+深拷贝,复制一个红黑树
 
 函数有两个参数：第一个参数`link_type x`是指向原始树根节点的指针，第二个参数`link_type p`是指向复制树中根节点父节点的指针。
 
