--- a/Node/红黑树的删除.md
+++ b/Node/红黑树的删除.md
@@ -166,6 +166,10 @@ inline void __rb_tree_rotate_right(__rb_tree_node_base *x, __rb_tree_node_base *
 
 
 
+红黑树的删除主要破坏的红黑树条件是：任何节点到树尾端的任何路径，所含的黑色节点数相同。
+
+
+
 删除操作总纲：
 
 1. 执行标准的 BST 的删除操作（上面的操作就是）
